--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -40,9 +40,7 @@ jobs:
           user: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
 #          port: ${{ secrets.SSH_PORT }}
-            command: |
-              cd /tmp
-              ls -a
+          command: ls -la
 
 
 #uses: fifsky/ssh-action@master
