--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -1,26 +1,3 @@
-#name: staging-deployment
-#
-#on:
-#  push:
-#    branches: [ staging ]
-#
-#jobs:
-#  deploy:
-#
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Deploy to staging
-#        uses: andiLeong/my-e-commence@staging
-#        with:
-#          host: ${{ secrets.SSH_HOST }}
-#          username: ${{ secrets.SSH_USERNAME }}
-#          key: ${{ secrets.SSH_PRIVATE_KEY }}
-#          port: ${{ secrets.SSH_PORT }}
-#          script: whoami
-
-
-
 name: staging-deployment
 
 on:
@@ -34,13 +11,36 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Deploy to staging
-        uses: fifsky/ssh-action@master
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
-          user: ${{ secrets.SSH_USERNAME }}
+          username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: whoami
+
+
+
+#name: staging-deployment
+
+#on:
+#  push:
+#    branches: [ staging ]
+#
+#jobs:
+#  deploy:
+#
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Deploy to staging
+#        uses: fifsky/ssh-action@master
+#        with:
+#          host: ${{ secrets.SSH_HOST }}
+#          user: ${{ secrets.SSH_USERNAME }}
+#          key: ${{ secrets.SSH_PRIVATE_KEY }}
 #          port: ${{ secrets.SSH_PORT }}
-          command: ls -la
+#          command: ls -la
 
 
 #uses: fifsky/ssh-action@master
